--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="fullpage.js"></script>
     <script src="fullpageSetup.js"></script>
 
+    <script src="confetti.js"></script>
+
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 </head>
